[metadata]
version = 0.1.0
name = PSphereHull
description = P-Sphere Hull
url = https://code.tessella.com/projects/FRAR/repos/pspherehull/browse
author = Tessella
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
package_dir =
    =src
python_requires = >= 3.7
install_requires =
    numpy >= 1.16
    pandas
    scikit-learn
    matplotlib

[options.packages.find]
where = src

[options.extras_require]
dev = pytest >= 6; black; isort; flake8
